# MK10-PRO

./: .gitignore  DESIGN_EVALUATION.md  LICENSE  Makefile  QUICKSTART.md  README.md  mk10.config.yaml  pyproject.toml  requirements.txt  setup.py
cli/: __init__.py  mk10.py
cli/commands/: execute.py  ingest.py  promote.py  verify.py
docs/: MTB.md  SPEC.md  VERIFICATION.md
engine/: __init__.py
engine/core/: __init__.py  context.py  dag.py  engine.py  errors.py  node.py
engine/evidence/: __init__.py  canonical.py  hash.py  recorder.py  signatures.py
engine/formats/: __init__.py
engine/formats/dcp/: __init__.py  rules.yaml  validate.py
engine/formats/dcp/schemas/: .gitkeep
engine/policy/: __init__.py  policy.py  rules.yaml  states.yaml
engine/util/: __init__.py  fs.py  json.py  time.py
examples/: simple_dag.yaml
mtb/: __init__.py  builder.py  seal.py  verify.py
mtb/schema/: evidence.schema.json  mtb.schema.json
tests/: __init__.py  test_mtb.py  test_policy.py
verifier/: __init__.py  verify_mtb.py
verifier/examples/: .gitkeep
